# proofrl

./: README.md  main.py  pyproject.toml
dsconfig/: dss3_config.yaml
nproof/: train.json  valid.json
scripts/: dft_preprocess_qwen3_8b.sh  eval_ds3.1.sh  proofrl_qwen3_8b.sh  rlvr_baseline.sh  rprover_train.sh
utils/: async_runner.py
